--- a/app/src/main/res/layout/item_session_info.xml
+++ b/app/src/main/res/layout/item_session_info.xml
@@ -86,9 +86,7 @@
             app:layout_constraintTop_toTopOf="@id/detail_image"
             app:layout_constraintVertical_bias="0"
             app:eventHeaderAnim="@{viewModel.session}"
-            app:goneUnless="@{safeUnbox(!viewModel.hasPhoto)}"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true" />
+            app:goneUnless="@{safeUnbox(!viewModel.hasPhoto)}" />
 
         <TextView
             android:id="@+id/session_detail_title"
@@ -168,7 +166,8 @@
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/session_detail_room"
             app:sessionStartCountdown="@{viewModel.timeUntilStart}"
-            tools:text="Inicia em 5 minutos" />
+            tools:text="Inicia em 5 minutos"
+            android:textColor="@color/blue_accent"/>
 
         <TextView
             android:id="@+id/session_detail_description"
