--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,5 @@
     <dimen name="margin_normal">16dp</dimen>
     <dimen name="spacing_micro">4dp</dimen>
     <dimen name="speaker_headshot_size">40dp</dimen>
+    <dimen name="speaker_large_headshot_size">112dp</dimen>
 </resources>
