--- a/app/src/main/res/layout/item_event_session.xml
+++ b/app/src/main/res/layout/item_event_session.xml
@@ -78,6 +78,8 @@
             android:layout_height="48dp"
             android:background="?selectableItemBackgroundBorderless"
             android:contentDescription="@string/acc_event_mark_session"
+            android:checked="@{data.isStarred()}"
+            android:onClick="@{() -> listener.onStarClicked(data)}"
             android:src="@drawable/asld_star_event"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
