--- a/app/src/main/res/layout/item_speaker_info.xml
+++ b/app/src/main/res/layout/item_speaker_info.xml
@@ -123,7 +123,7 @@
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/spacer"
             app:facebookUrl="@{viewModel.speaker.url}"
-            app:githubUrl="@{null}"
+            app:githubUrl="@{viewModel.speaker.github}"
             app:linkedInUrl="@{null}"
             app:twitterUrl="@{null}"
             tools:text="Facebook / GitHub" />
