--- a/app/src/main/res/menu/activity_logged_drawer.xml
+++ b/app/src/main/res/menu/activity_logged_drawer.xml
@@ -63,6 +63,12 @@
             app:itemTextColor="@drawable/side_nav_calendar_text"/>
 
         <item
+            android:id="@+id/nav_big_tray"
+            android:icon="@drawable/ic_food_black_24dp"
+            android:title="@string/title_big_tray"
+            app:itemTextColor="@drawable/side_nav_big_tray_text"/>
+
+        <item
             android:id="@+id/nav_enrollment_certificate"
             android:title="@string/title_enrollment_certificate"
             android:icon="@drawable/ic_certificate_icon"
