--- a/app/src/main/res/values/play_games_strings.xml
+++ b/app/src/main/res/values/play_games_strings.xml
@@ -37,4 +37,5 @@
     <string name="achievement_you_tried_2048" translatable="false">CgkIz4rBs-YKEAIQJA</string>
     <string name="achievement_unes_2048_champion" translatable="false">CgkIz4rBs-YKEAIQJQ</string>
     <string name="achievement_practice_makes_perfect" translatable="false">CgkIz4rBs-YKEAIQJg</string>
+    <string name="achievement_dora_the_mysterious" translatable="false">CgkIz4rBs-YKEAIQJw</string>
 </resources>
