--- a/app/src/main/res/layout/fragment_big_tray.xml
+++ b/app/src/main/res/layout/fragment_big_tray.xml
@@ -129,17 +129,17 @@
             android:orientation="vertical"
             android:layout_alignParentBottom="true">
 
-            <!--<Button-->
-                <!--android:id="@+id/btn_visit_big_tray"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="48dp"-->
-                <!--android:layout_marginStart="16dp"-->
-                <!--android:layout_marginBottom="8dp"-->
-                <!--android:layout_marginLeft="16dp"-->
-                <!--android:layout_marginEnd="16dp"-->
-                <!--android:layout_marginRight="16dp"-->
-                <!--style="@style/Widget.AppCompat.Button.Colored"-->
-                <!--android:text="@string/visit_official_website"/>-->
+            <Button
+                android:id="@+id/btn_open_notification"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:text="@string/ru_open_as_notification"/>
 
             <TextView
                 android:id="@+id/tv_ru_last_update"
